# Rust-simple-math-crate

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
