[package]
name = "math-crate"
version = "0.1.0"
authors = ["Kevnew_rust"]
edition = "2021"
description = "A libary for doing simple calculations in Rust."
license = "MIT"
documentation = "https://docs.rs/math-crate/0.1.0/math_crate/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
